--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0.38"
+csv = "1.1.5"
+serde = { version = "1.0", features = ["derive"] }
+regex = "1"
+dotenv = "0.15"
+mysql = "20.1"
